# cosmic-observables

./: .pre-commit-config.yaml  AI.md  BIBLIOGRAPHY.md  CLOSURE_NOTE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs.yml
adr/: ADR-0001-observational-evidence-registry.md  ADR-0002-phase1-data-model.md  ADR-0003-calibration-and-extinction-policy.md  README.md
artifacts/sne-ia/: sne-ia-cosmology-distances.csv  sne-ia-cosmology-distances.provenance.yaml  sne-ia-nearby-calibrators.csv  sne-ia-nearby-calibrators.provenance.yaml
docs/: ROADMAP.md  conf.py  index.md
docs/adr/: ADR-0001-observational-evidence-registry.md  ADR-0002-phase1-data-model.md  ADR-0003-calibration-and-extinction-policy.md  index.md
docs/sne-ia/: index.md
observables/sne-ia/: README.md  pantheon_plus_aliases.yaml
observables/sne-ia/catalogs/: cfa.yaml  cnia002.yaml  csp-dr3.yaml  des-sn5yr.yaml  foundation.yaml  pantheon-plus.yaml  sdss-ii-sn.yaml  tns.yaml  wiserep.yaml  ztf-dr1.yaml
observables/sne-ia/filter-matches/: csp-dr3-b.yaml  csp-dr3-v.yaml  foundation-g.yaml  foundation-i.yaml  (+2 more)
schemas/: artifact-provenance.schema.json  catalog.schema.json  filter-match.schema.json  filter.schema.json  object.schema.json  photometry.schema.json  source.schema.json  validation-set.schema.json
scripts/: coord_conv.py
src/cosmic_observables/: __init__.py  alias_table.py  bibliography.py  cross_match.py  http_client.py
tests/: test_manifests.py
tests/fixtures/: README.md  object-with-disagreements.yaml
(+37 files in other folders)
