[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmic-observables"
version = "0.0.0"
description = "Empirical astronomy observables for Cosmic Foundry validation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "jsonschema",
  "pyyaml",
]

[project.optional-dependencies]
test = [
  "pytest",
]
dev = [
  "pytest",
  "pre-commit",
  "black",
  "ruff",
  "mypy",
  "codespell",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "NPY",
]

[tool.mypy]
python_version = "3.11"
files = ["src/cosmic_observables"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
